--- a/client/src/components/jobs/styles/hightPayingJobs.css
+++ b/client/src/components/jobs/styles/hightPayingJobs.css
@@ -40,7 +40,7 @@ background-color: #3f51b5;
   text-align: center;
 }
 .high-pay-job-title{
-color: coral;
+color: #00d707;
     font-weight: bold;
     letter-spacing: 1px;
 }
