--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -70,7 +70,7 @@ top: 15vh;
 }
 .job-container .job-title {
     font-weight: 600;
-    color: #28fc30;
+    color: #04e20b;
     padding: 5px;
     margin-bottom: 5px;
     border-bottom: 1px #aeb1bd solid;
