--- a/client/src/screens/candidate/candidateProfile.css
+++ b/client/src/screens/candidate/candidateProfile.css
@@ -7,11 +7,17 @@
   height: calc(100vh -45px);
   width: 100%;
 }
+.dev-profile>h1{
+      border-bottom: 1px #3f51b5 solid;
+    padding: 5px;
+    color: green;
+}
 .dev-profile {
-  padding: 0 0 50px 0;
-  margin: auto;
-  margin-top: 45px;
-  min-height: calc(100vh - 45px);
+    margin: auto;
+    margin-top: 10px;
+    min-height: calc(100vh - 45px);
+    display: flex;
+    justify-content: center;
 }
 
 .user-name {
