--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,25 +1,29 @@
 .sidebar-items {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 32px;
-  background: #edf2e8;
-  border-radius: 10px;
-  padding: 5px;
+display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 35px;
+    background: #f1f7eb;
+    border-radius: 7px;
+    padding: 5px;
 }
 
 
-.sidebar-items a:hover {
-  color: white;
-  letter-spacing: 5px;
-  background-color: #009688;
+.sidebar-items a {
+    text-decoration: none;
+    padding: 5px;
+    border: 1px #3f51b5 solid;
+    width: 50%;
+    text-align: center;
+    border-radius: 5px;
+    color: #3f51b5;
+    background: #f9fbf7;
+    transition: background ease-in-out 0.3s;
+  }
+  .sidebar-items a:hover{
+    background: #3f51b5;
+  color: #f9fbf7;
+
 }
-.view-profile {
-  background-color: #009688;
-  color: #fff;
-  border-radius: 10px;
-  cursor: pointer;
-}
-a {color: white;}
