--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -30,30 +30,53 @@
   transition: all ease-in-out 0.6s;
 }
 .logo {
-  /* the app logo*/
-  font-family: serif;
-  text-shadow: 3px 3px 1px #586766;
-  font-weight: 600;
-  text-align: center;
-  color: #ffffff;
+    width: max-content;
+    font-family: serif;
+    text-shadow: 3px 3px 1px #586766;
+    font-weight: 600;
+    text-align: center;
+    color: #00ff0a;
 }
 
 .menu {
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  padding-top: 20px;
-  background: white;
-  width: 230px;
-  transition: all ease-in-out 0.5s;
+ height: 70vh;
+    position: absolute;
+    top: 0;
+    padding-top: 20px;
+    background: #f9fbf7;
+    width: 230px;
+    transition: all ease-in-out 0.5s;
+    border-bottom-left-radius: 10px;
+    box-shadow: var(--main-box-shadow);
 }
-.middle-links {
+.user-links {
     display: flex;
     align-items: center;
     justify-content: end;
     position: relative;
 }
 
-.middle-links li {
+.user-links li {
   list-style-type: none;
+}
+.middle-links{
+  justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+.middle-links a{
+     color: white;
+     font-size: 20px;
+     font-family: serif;
+     text-decoration: none;
+     margin: 0 5px;
+     border-bottom: 1px #3f51b5 solid;
+     padding: 0 5px;
+     transition: all ease-in-out 0.3s;
+     
+    }
+    .middle-links a:hover{
+    color: rgb(231, 228, 228);
+  border-bottom: 1px white solid;
+
 }
