--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@ body {
   padding: 0;
 }
 .bs{
-  box-shadow: 3px 3px 20px -11px #0027ff;
+  box-shadow: 3px 3px 27px -21px #0027ff
 
 }
 .profile-image {
