--- a/client/src/components/candidate_components/experience/experience.css
+++ b/client/src/components/candidate_components/experience/experience.css
@@ -99,14 +99,18 @@
   color: #9b9797;
   border-radius: 5px;
 }
-.options .icon:hover {
-  background-color: #d1d2d0;
+.options .icon{
+      background-color: #fedbce
+}
+.options .icon:hover{
+      background-color: #3f51b5;
+      color: white;
 }
 .back {
   background-color: red;
 }
 .options-menu {
- height: auto;
+    height: auto;
     list-style: none;
     border-radius: 5px;
     box-shadow: var(--main-box-shadow);
@@ -116,25 +120,21 @@
     width: -moz-fit-content;
     width: fit-content;
     top: 21px;
-    right: 32px;
-    background: #ffffff;
+    right: 38px;
+    background: #3f51b5;
 }
 .options-menu li {
-  border: 2px #ffffff solid;
-  box-shadow: var(--main-box-shadow);
-  transition: all 0.7s;
-  margin: 5px;
-  /* background-color: #f5f8f3; */
-  text-align: center;
-  padding: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.5s;
+    border-bottom: 1px #ffffff solid;
+    box-shadow: 3px 3px 20px -11px #f7f9f7;
+    text-align: center;
+    padding: 0 5px;
+    margin: 12px;
+    cursor: pointer;
+    transition: all 0.2s;
+    color: white;
 }
 .options-menu li:hover {
-  background-color: var(--main-bg-color);
-  border: 2px #20a11c solid;
-  letter-spacing: 1px;
+    letter-spacing: 1px;
 }
 
 .show {
@@ -156,6 +156,6 @@
     border: 1px red;
     position: absolute;
     top: -17px;
-    right: -29px;
+    right: -25px;
     cursor: pointer;
 }
