--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -26,8 +26,9 @@
   top: 66px;
 }
 .job-date{
-     color: #ffc107;
-      font-size: 11px;
+    color: black;
+    font-size: 12px;
+
 }
 .errors h5 {
   z-index: 999;
@@ -70,15 +71,17 @@ top: 15vh;
 }
 .job-container .job-title {
     font-weight: 600;
-    color: #04e20b;
+    color: #627aff;
     padding: 5px;
     margin-bottom: 5px;
     border-bottom: 1px #aeb1bd solid;
     padding-right: 15px}
 
 .job-container .name {
-    transition: all 0.5s;
-    color: #cacbcf;
+ 
+    color: #4caf50;
+    font-weight: bold;
+
     
 }
 .pointer-parent{
@@ -108,31 +111,30 @@ top: 15vh;
 }
 
 .job-container {
-    background-color: #3f51b5;
+   background-color: #f9fbf7;
     color: white;
     border-radius: 5px;
     padding-top: 3px;
-    box-shadow: 0 0 30px -24px #000000;
+    box-shadow: 0 0 30px -24px #0027ff;
   }
   
   
   .job-container p {
-    height: fit-content;
-    background-color: #fedbce;
+     background-color: #f1f7eb;
     color: black;
     width: 100%;
-     overflow: hidden;
-    margin: 0;
+    overflow: hidden;
+    margin: 7px 0;
     height: 100px;
     border-radius: 5px;
 }
 .latest-jobs-options{
-      right: 23px;
+      right: 33px;
     width: 4px;
     top: 2px; position: absolute;
 }
 .latest-jobs-options .icon{
-      background-color: #c5cbeb;
+      background-color: #fedbce
 }
 .latest-jobs-options .icon:hover{
       background-color: #3f51b5;
@@ -153,30 +155,18 @@ cursor: pointer;
 }
 
 .logo-container .logo {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px #3f51b5 solid;
 }
-.job-marker {
-  width: 41px;
-  height: 40px;
-  border-radius: 50%;
-  position: absolute;
-  top: 3px;
-  right: 3px;
-  background-color: #029b27;
-  color: white;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .job-container .salary {
-    color: #00ff72;
+color: #00ff0a;
     padding: 0 3px;
     margin: 5px 0;
     background: #3f51b5;
-    font-weight: 600;
+    /* font-weight: 600; */
     width: -moz-fit-content;
     width: fit-content;
     border-radius: 5px;
@@ -185,28 +175,29 @@ cursor: pointer;
       align-items: center;
     justify-content: center;
 }
-.footer button {
-  padding: 0 4px;
-  margin: 5px;
-  border-radius: 5px;
-  border: none;
+.footer a {
+     padding: 0 4px;
+    margin: 5px;
+    border-radius: 5px;
+    border: none;
+    font-weight: 600;
+    font-family: ui-sans-serif;
+    text-decoration: none;
+}
 
-  color: white;
-  font-weight: 600;
-  font-family: ui-sans-serif;
+.footer a.details {
+     color: #35a3fd !important;
+    border: 1px #35a3fd solid;
 }
-.footer button.details {
-  background: #008bf9;
+.footer a.details:hover {
+     background: #35a3fd !important;
+    color: white !important;
 }
-.footer button.details:hover {
-  background: #45abff;
+.footer a.apply {
+     color: white !important;
+   background: blue;
 }
-.footer button.apply {
-  background-color: blue;
-}
-.footer button.apply:hover {
-  background-color: rgb(70, 70, 252);
-}
+
 .page-number,
 .arrow{
   cursor: pointer;
