--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -12,8 +12,8 @@
 
 
 .top-right {
-  align-items: center;
-  justify-content: space-between;
+     align-items: center;
+    justify-content: start;
 }
 .top-middle {
   display: flex;
@@ -59,24 +59,5 @@
 .user-links li {
   list-style-type: none;
 }
-.middle-links{
-  justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-.middle-links a{
-     color: white;
-     font-size: 20px;
-     font-family: serif;
-     text-decoration: none;
-     margin: 0 5px;
-     border-bottom: 1px #3f51b5 solid;
-     padding: 0 5px;
-     transition: all ease-in-out 0.3s;
-     
-    }
-    .middle-links a:hover{
-    color: rgb(231, 228, 228);
-  border-bottom: 1px white solid;
 
-}
+  
