social media links code refactoring

--- a/client/src/components/topbar/userOptions.css
+++ b/client/src/components/topbar/userOptions.css
@@ -14,7 +14,7 @@ background-color: #ffffff;
 }
 .user-drop-menu li{
     margin: 5px;
-    
+    list-style: none;
 }
 .logout-delete-parent{
       display: flex;
